--- a/Client/src/translations/en.json
+++ b/Client/src/translations/en.json
@@ -40,6 +40,9 @@
                 "manage-handbook":"Manage handbook"
             
         },
+        "doctor":{
+            "manage-schedule":"Manage schedule"
+        },
         "welcome":"Welcome, "
     },
     "manage-user":{
@@ -57,6 +60,13 @@
         "upload-image":"Upload image",
         "create-user":"Create user",
         "save-change":"Save change"
+    },
+    "manage-schedule":{
+        "title":"Manage doctor's schedule",
+        "doctor":"Doctor",
+        "day":"Day",
+        "time":"Time"
+
     }
 
 
